--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,7 +1,7 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+title: 'Blog Post #1'
+date: 2024-05-11
+permalink: /posts/2024/05/blog-post-1/
 tags:
   - cool posts
   - category1
@@ -9,6 +9,10 @@ tags:
 ---
 
 This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+
+That was sample text up there. Isn't that cool. This website is from a super cool template that I forked. As I write this I am worried that I did the date format incorrectly because I am not sure if the month is supposed to come before the day or the other way around. This is also a bad day to do that because I know that there is a 5th month and an 11th month so someone, lets say from another planet, might not know which date it is if they were unfamiliar with the many different (UNSTANDARDIZED 😡) date systems we use around the world. Anyways, I'm glad I got that off my chest. Now that I think about it, I'd assume if it were an alien reading this, the date format would be far from the hardest thing to understand given aspects such as language and technology related barriers.
+
+I digress. If you are reading this you're likely a recruiter looking at my portfolio and in that case hi ☺ its nice to meet you! Or you are a nosey person who found this and in that case hi too! I am really looking for an internship. I am super duper good at coding so please help me find one. And I think thats about it. Hopefully I dont forget about this blog and I continue to post on it. If I do, at least I thought of it once, and thats what matters.
 
 Headings are cool
 ======
